Feat: Email 서비스를 위해서 user에 맞게 필터링된 JobPosting들을 제공하는 메서드 추가